--- a/ressources/css/admin/style.css
+++ b/ressources/css/admin/style.css
@@ -4978,3 +4978,30 @@ span.customSelect.changed {
     width: 100px;
     height: 100px;
 }
+/*pop up box */
+.black_overlay{
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    z-index:1001;
+    -moz-opacity: 0.8;
+    opacity:.80;
+    filter: alpha(opacity=80);
+}
+.white_content {
+    display: none;
+    position: absolute;
+    top:40%;
+    left: 25%;
+    width: 50%;
+    height: 50%;
+    padding: 16px;
+    border: 16px solid #394a59;
+    background-color: white;
+    z-index:1002;
+    overflow: auto;
+}
