--- a/ressources/css/admin/style.css
+++ b/ressources/css/admin/style.css
@@ -508,6 +508,8 @@ ul.sidebar-menu li.active a i {
     left: 0;
     right: 0;
     z-index: 1002;
+    background: white none repeat scroll 0 0;
+    border-bottom:3px solid #394a59;
 }
 
 .white-bg {    
